  * Thud now prints its version number to the main window upon startup.

 Bug Fixes:

  * Menu shortcuts should now change the modifier they use based on the platform that Thud is being run on. This means 'Meta' (Command) on the Macintosh, and 'Control' on everything else.
  * Zooming out to height zero should no longer be possible.
  * A few internal changes that should speed up Thud were made.
  * The .jar file that Thud is shipped in now has a proper manifest file. This means Thud can be started from the command line simply using: java -jar Thud.jar

 Future Plans:

  * A dialog to input user/password for connecting when a MUX is chosen from the 'HUD' menu.
  * A method to add and remove MUXes from the 'HUD' menu.
  * Moving some of the currently available preferences to a Preferences dialog box, plus adding some of the advanced ones.
  * More intuitive controls for scrolling the map are needed.
  * A better armor display of some kind, instead of just an overall percentage.

1.0b5

 I've decided to move to a more traditional version numbering system as we approach a final 1.0 release. :)
 
 New Features:

  * There is now a preferences window which allows for changing of colors on the map display, font sizes, and more.
  * Your own unit is now drawn in a bold line on the tactical map to help differentiate it in large battles.
  * You can now show cliffs, which will highlight edges in red which will cause a fall or halt.
  * Changes to internal way that maps are stored.
  * Thud will now exit when the main window is closed.
  
 Bug Fixes:
  
  * Thud now handles underground maps properly (unknown hexes show up black on the tactical display).
  * Some work on map correctness done, but there's still more to do.
  * A lot of small bug fixes
  
1.0b6

 New Features:
 
  * Better ANSI support: background colors and underline mode now supported
  
 Bug Fixes:
 
  * Much much quicker connect-to-MUX time
  * Much quicker text handling
  
  